MSVC __forceinline slows down JSC release build fivefold after r229391 https://bugs.webkit.org/show_bug.cgi?id=184062

Reviewed by Alex Christensen.

Source/JavaScriptCore:

* jit/CCallHelpers.h:
(JSC::CCallHelpers::marshallArgumentRegister):
Exempt MSVC from a single forced inline used within recursive templates.

Source/WebCore:

* platform/graphics/FormatConverter.cpp:
Factor ALWAYS_INLINE_EXCEPT_MSVC out to WTF.

Source/WTF:

* wtf/Compiler.h:
Add ALWAYS_INLINE_EXCEPT_MSVC to support MSVC optimizer sensitivities.


Canonical link: https://commits.webkit.org/199693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230062 268f45cc-cd09-0410-ab3c-d52691b4dbfc