Source/WTF/wtf/Compiler.h
@@ -178,6 +178,12 @@
 #define ALWAYS_INLINE inline
 #endif
 
+#if COMPILER(MSVC)
+#define ALWAYS_INLINE_EXCEPT_MSVC inline
+#else
+#define ALWAYS_INLINE_EXCEPT_MSVC ALWAYS_INLINE
+#endif
+
 /* WTF_EXTERN_C_{BEGIN, END} */
 
 #ifdef __cplusplus
